# finufft

./: .gitignore  CMakeLists.txt
include/: cufinufft.h
include/cufinufft/: impl.h
matlab/: CMakeLists.txt
src/cuda/: cufinufft.cu  memtransfer_wrapper.cu
src/cuda/2d/: cufinufft2d.cu
src/cuda/3d/: cufinufft3d.cu
